--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
+
 <body>
   <header></header>
   <main>
@@ -14,10 +16,13 @@
     <div id="divB">b</div>
     <div id="divC">c</div>
     <div id="divD">d</div>
-    <div id="divE">e</div>
-    <div id="divF">f</div>
-    <div id="divG">g</div>
-    <div id="divH">h</div>
+    
+      <div class="left" id="divE">e</div>
+      <div class="left" id="divF">f</div>
+    
+      <div class="left1" id="divG">g</div>
+      <div class="left1" id="divH">h</div>
+
     <div id="divI">i</div>
 
 
@@ -25,4 +30,5 @@
 
   </main>
 </body>
+
 </html>
